# Lakehouse_Analytics_Pipeline

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
data/sample/: orders.csv
docs/: architecture.md  data_model.md  feature_spec.md
docs/adr/: 001-partitioning.md  002-dedup.md
output_web/: manifest.txt
output_web/kpis/: cohort_retention.csv  kpi_avg_order_value.csv  kpi_customer_ntile.csv  kpi_daily_revenue.csv  kpi_order_rank_per_customer.csv  kpi_orders_per_customer.csv  kpi_peak_hour.csv  kpi_quantity_by_category.csv  kpi_revenue_by_week.csv  kpi_revenue_lag.csv  kpi_running_revenue.csv  kpi_top_categories.csv  kpi_top_products.csv
output_web/reports/: data_profile.csv  data_quality_summary.csv  data_quality_summary.html  report.html
output_web/validation/: validation_duplicates_after.csv  validation_duplicates_before.csv  validation_null_rates_silver.csv  validation_referential_integrity.csv
scripts/: download_data.sh  prepare_web_outputs.sh
src/lakehouse_pipeline/: cli.py  config.py  reporting.py
src/lakehouse_pipeline/io/: readers.py  writers.py
src/lakehouse_pipeline/quality/: expectations.py  profiling.py
src/lakehouse_pipeline/sql/: cohort_retention.sql  kpis.sql  validation.sql
src/lakehouse_pipeline/transforms/: bronze.py  gold.py  schema_adapter.py  silver.py  spark.py
src/lakehouse_pipeline/utils/: cache.py  hash.py  logging.py
tests/: test_quality.py  test_schema_adapter.py  test_sql_sanity.py  test_transforms.py
