[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lakehouse-analytics-pipeline"
version = "0.1.0"
description = "Batch lakehouse analytics pipeline prototype"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "polars>=1.0.0",
  "duckdb>=1.0.0",
  "matplotlib>=3.8.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0"
]
spark = [
  "pyspark>=3.5.0,<4.0.0"
]
dashboard = [
  "streamlit>=1.35.0"
]

[project.scripts]
lakehouse = "lakehouse_pipeline.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
